# dumpbot

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  cron-daily-export.sh  daily_export.py  data_store.py  debug_bot.py  deploy.sh  digest_integration.py  dumpbot.py  git_sync.py  pyproject.toml  test_bot.py
data/: entries.jsonl  telegram-2026-03-15.json  telegram-2026-03-16.json  telegram-2026-03-17.json  telegram-2026-03-18.json  telegram-2026-03-19.json  telegram-2026-03-20.json  telegram-2026-03-21.json  telegram-2026-03-22.json  telegram-2026-03-23.json  telegram-2026-03-24.json  telegram-2026-03-25.json  telegram-2026-03-26.json  telegram-2026-03-27.json  telegram-2026-03-28.json  telegram-2026-03-29.json  telegram-2026-03-30.json  telegram-2026-03-31.json
systemd/: dumpbot.service
